--- a/views/index.ejs
+++ b/views/index.ejs
@@ -161,7 +161,7 @@
 						Wizerati. &copy; Ben Aston 2013
 					</div>
 					<div class="results wrapper hidden">
-						<div class="hover" draggable="true" id="r1" ondragstart="drag(event)" >
+						<div class="hover" draggable="true" id="r1" ondragstart="drag(event);" >
 							<div class="textual result sheen" >	
 								<h2>C# Developer / Technical Lead</h2>	
 								<p>&pound;475-550/day (more for excellent candidates)</p>
@@ -169,24 +169,24 @@
 								<p class="posted">2 days ago</p>								
 							</div>			
 						</div>
-						<div class="hover" draggable="true" id="r2" ondragstart="drag(event)" >
+						<div class="hover" draggable="true" id="r2" ondragstart="drag(event);$(this).addClass('scale-down');" ondragend="$(this).removeClass('scale-down');" >
 							<div class="result sheen ignored"style="background-image: url(http://images1.wikia.nocookie.net/__cb20081123044821/thundercats/images/3/3d/Panthro.jpg); background-position:0 0 !important;">	
 							</div>			
-						</div><div class="hover" draggable="true" id="r3" ondragstart="drag(event)" >
+						</div><div class="hover" draggable="true" id="r3" ondragstart="drag(event);$(this).addClass('scale-down');" ondragend="$(this).removeClass('scale-down');" >
 							<div class="result sheen visited" style="background-image: url(http://images4.wikia.nocookie.net/__cb20090329145138/thundercats/images/2/2d/Wilykit.jpg); background-position:0 0 !important;">	
 							</div>			
-						</div><div class="hover" draggable="true" id="r4" ondragstart="drag(event)" >
+						</div><div class="hover" draggable="true" id="r4" ondragstart="drag(event);$(this).addClass('scale-down');" ondragend="$(this).removeClass('scale-down');" >
 							<div class="result sheen"style="background-image: url(http://images4.wikia.nocookie.net/__cb20120619031141/thundercats/images/1/17/Thundercats_2011_S01E21.avi_snapshot_11.01_-2012.06.18_22.31.27-.jpg); background-position:0 0 !important;">	
 							</div>			
-						</div><div class="hover" draggable="true" id="r5" ondragstart="drag(event)" >
+						</div><div class="hover" draggable="true" id="r5" ondragstart="drag(event);$(this).addClass('scale-down');" ondragend="$(this).removeClass('scale-down');" >
 							<div class="result sheen updated" draggable="true" id="r5" ondragstart="drag(event)" style="background-image: url(http://images2.wikia.nocookie.net/__cb20110828055707/thundercats/images/thumb/c/c5/Unknown_ancient_Thundercat_beside_Munra_%28LionO_resembles_him%29.png/830px-Unknown_ancient_Thundercat_beside_Munra_%28LionO_resembles_him%29.png); background-position:0 0 !important;">	
 							</div>			
 						</div>
-						<div class="hover" draggable="true" id="r6" ondragstart="drag(event)" >
+						<div class="hover" draggable="true" id="r6" ondragstart="drag(event);$(this).addClass('scale-down');" ondragend="$(this).removeClass('scale-down');" >
 							<div class="result sheen" style="background-image: url(http://images3.wikia.nocookie.net/__cb20120516221435/thundercats/images/2/2f/Pumyra3.jpg); background-position:0 0 !important;">	
 							</div>			
 						</div>
-						<div class="hover" draggable="true" id="r7" ondragstart="drag(event)" >
+						<div class="hover" draggable="true" id="r7" ondragstart="drag(event);$(this).addClass('scale-down');" ondragend="$(this).removeClass('scale-down');" >
 							<div class="result sheen" style="background-image: url(http://images4.wikia.nocookie.net/__cb20120415055932/thundercats/images/f/f0/TC2011ClaudusQueen.png); background-position:0 0 !important;">	
 							</div>			
 						</div>
