--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -309,13 +309,33 @@
 	.availability 
 		margin-bottom:10px
 
+	.cube-controls
+		width: 260px
+		position: absolute
+		left: 188px
+		top: 49px
+
+	.cube-net
+		position: relative
+		left: 50px
+		
+	.cube-net label
+		margin: auto !important
+		
+
+	.cube-net tr:nth-child(2) label
+		left: 0 !important;
+	
+	.cube-controls
+		width: 260px
+		
 	body 	
 		color:#333
 		margin: 0 /*from bootstrap*/
 		line-height: 20px /*from bootstrap*/
 		font-size: 1.1em
 		font-family: 'museo-sans-500'
-		background-image: url('./logo.svg')
+		background-image: url('/images/logo.svg')
 		background-size: 2000px auto, auto auto
 		background-repeat: no-repeat, repeat
 		background-position: 0 0
@@ -359,6 +379,8 @@
 	.favourites 
 		height: 100%
 		width:100%
+		border: 0px solid silver
+		border-radius: 26px		
 
 	.favourites .hover
 		width:108px
@@ -502,11 +524,11 @@
 	.my-favourites .result 
 		cursor:pointer
 
-	.my-favourites #fav:checked ~ .favourites .hover:not(.favourite-placeholder) .result:nth-child(odd) 
+	.my-favourites #fav:checked ~ figure .favourites .hover:not(.favourite-placeholder) .result:nth-child(odd) 
 		-webkit-animation: jiggle 0.2s infinite .05s
 		-moz-animation-name: jiggle
 
-	.my-favourites #fav:checked ~ .favourites .hover:not(.favourite-placeholder) .result:nth-child(even) 
+	.my-favourites #fav:checked ~ figure .favourites .hover:not(.favourite-placeholder) .result:nth-child(even) 
 		-webkit-animation: jiggle 0.2s infinite
 		-moz-animation-duration: 0.2s
 		-moz-animation-name: jiggle
@@ -514,16 +536,16 @@
 		-webkit-transform: rotate(-1deg)
 		-moz-transform: rotate(-1deg)
 
-	.my-favourites #fav:checked ~ .favourites .hover:not(.favourite-placeholder) .result:after 
+	.my-favourites #fav:checked ~ figure .favourites .hover:not(.favourite-placeholder) .result:after 
 		content:none !important
 
-	.my-favourites #fav:checked ~ .favourites .hover:not(.favourite-placeholder) .result
+	.my-favourites #fav:checked ~ figure .favourites .hover:not(.favourite-placeholder) .result
 		opacity:1 !important
 
-	.my-favourites #fav:checked ~ .favourites .hover:not(.favourite-placeholder) .result:before:hover
+	.my-favourites #fav:checked ~ figure .favourites .hover:not(.favourite-placeholder) .result:before:hover
 		border: 2px solid black
 
-	.my-favourites #fav:checked ~ .favourites .hover:not(.favourite-placeholder) .result::before 
+	.my-favourites #fav:checked ~ figure .favourites .hover:not(.favourite-placeholder) .result::before 
 		background-color: rgba(0,0,0,1)
 		border-radius: 41px
 		box-shadow: 0px 0px 0 0px #333
@@ -532,7 +554,7 @@
 		display: inline-block
 		font-size: 20px
 		position: relative
-		left: 47%
+		left: 0;
 		top: -52%
 		width: 2px
 		height: 113px
@@ -540,7 +562,7 @@
 		text-align: center
 		-webkit-transform: rotate(45deg)
 
-	.mac .my-favourites #fav:checked ~ .favourites .hover:not(.favourite-placeholder) .result:before 
+	.mac .my-favourites #fav:checked ~ figure .favourites .hover:not(.favourite-placeholder) .result:before 
 		line-height: 20px
 
 	.account-panel #p:checked ~ .profile-form,
@@ -560,7 +582,6 @@
 		position:absolute
 		margin: 20px auto 20px auto
 		width: 562px
-
 
 	.app-wrapper 
 		height:100%
@@ -832,6 +853,14 @@
 		padding:20px
 		color:#7a7a8a
 
+	#f-t:checked ~ .cube-controls label[for='f-t']
+	#f-l:checked ~ .cube-controls label[for='f-l']
+	#f-f:checked ~ .cube-controls label[for='f-f']
+	#f-r:checked ~ .cube-controls label[for='f-r']
+	#f-bottom:checked ~ .cube-controls label[for='f-bottom']
+	#f-back:checked ~ .cube-controls label[for='f-back']
+		border: 2px solid black
+		
 	input[type="radio"]:checked + label 
 		border: 2px solid black
 
@@ -843,7 +872,6 @@
 
 	input[type="radio"]:active + label 
 		box-shadow:inset 0 2px 4px rgba(0,0,0,0.15)
-
 
 	.app-wrapper > .back input[type="radio"]:active + label 
 		box-shadow:inset 0 2px 4px rgba(0,0,0,0.15)
@@ -963,19 +991,19 @@
 		text-decoration: none
 		box-shadow: 0 1px rgba(255,255,255,0.3) inset,0 10px 20px rgba(255,255,255,0.25) inset, 0 0 0 2px rgba(255, 255, 0, 0.3) inset
 
-	.my-favourites #fav:checked ~ .favourites .hover:not(.favourite-placeholder) .result:hover 
+	.my-favourites #fav:checked ~ figure .favourites .hover:not(.favourite-placeholder) .result:hover 
 		box-shadow: 0 1px rgba(255,255,255,0.3) inset,0 10px 20px rgba(255,255,255,0.25) inset, 0 0 0 2px rgba(255, 0, 0, 0.3) inset
 
-	.my-favourites #fav:checked ~ .favourites .hover:not(.favourite-placeholder) .result:active 
+	.my-favourites #fav:checked ~ figure .favourites .hover:not(.favourite-placeholder) .result:active 
 		box-shadow: 0 1px rgba(255,255,255,0.3) inset,0 10px 20px rgba(255,255,255,0.25) inset, 0 0 0 2px rgba(255, 0, 0, 0.8) inset !important
 
-	.my-favourites #fav:checked ~ .favourites .hover:not(.favourite-placeholder):active			
+	.my-favourites #fav:checked ~ figure .favourites .hover:not(.favourite-placeholder):active			
 		-webkit-animation-name: rotateAndLoseOpacity
 		-webkit-animation-duration: 1.1s		
 		-webkit-animation-timing-function: ease-out
 		 			
 
-	.my-favourites #fav:checked ~ .favourites .hover:not(.favourite-placeholder) .result:focus 
+	.my-favourites #fav:checked ~ figure .favourites .hover:not(.favourite-placeholder) .result:focus 
 		box-shadow: 0 0 0 2px rgba(255, 0, 0, 0.8) inset !important
 
 	.mac .circular-btn 
@@ -1206,8 +1234,8 @@
 
 	#btn-edit-favourites 
 		position:absolute
-		left: 280px
-		top: 86px
+		left: 250px
+		top: -65px
 
 @media only screen and (max-height: 700px) 
 
@@ -1226,7 +1254,7 @@
 	.navbar 
 		bottom:5px
 
-@media only screen and (max-width: 480px) 
+@media only screen and (max-width: 640px) 
 
 	#btn-search 
 		left: 86px
@@ -1334,10 +1362,8 @@
 	h1 
 		line-height:40px
 
-
 	.welcome-panel 
 		margin: 7px 30px
-
 
 	.an-employer 
 		top: 0
@@ -1345,12 +1371,10 @@
 		display: inline-block
 		left: 41px
 
-
 	#btn-it-contractor 
 		position: relative
 		left: 10px !important
 		top: 35px !important
-
 
 	#btn-employer 
 		left: -10px
