--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -24,6 +24,76 @@
 		font-weight normal
 		font-style normal
 		
+		
+		
+	.container
+		width: 260px
+		height: 260px
+		position: relative
+		border: none
+		-webkit-perspective: 1000px
+
+    #cube
+		width: 100%
+		height: 100%
+		position: absolute
+		-webkit-transform-style: preserve-3d
+		-webkit-transition: -webkit-transform 1s    
+
+    #cube figure
+		display: block
+		position: absolute
+		width: 260px
+		height: 260px
+		border: none
+		line-height: 85px
+		text-align: center
+
+    #cube.panels-backface-invisible figure
+		-webkit-backface-visibility: hidden
+
+    #cube .front
+		-webkit-transform: translateZ(100px)
+    
+    #cube .back
+		-webkit-transform: rotateX(-180deg) translateZ(100px)
+    
+    #cube .right 
+		-webkit-transform: rotateY(90deg) translateZ(100px)
+    
+    #cube .left 
+		-webkit-transform: rotateY(-90deg) translateZ(100px)
+    
+    #cube .top 
+		-webkit-transform: rotateX(90deg) translateZ(100px)
+    
+    #cube .bottom 
+		-webkit-transform: rotateX(-90deg) translateZ(100px)    
+
+    #cube.show-front, #f-f:checked ~ #cube
+		-webkit-transform: translateZ(-100px)
+    
+    #cube.show-back, #f-back:checked ~ #cube
+		-webkit-transform: translateZ(-100px) rotateX(-180deg)
+    
+    #cube.show-right, #f-r:checked ~ #cube
+		-webkit-transform: translateZ(-100px) rotateY(-90deg)
+    
+    #cube.show-left, #f-l:checked ~ #cube 
+		-webkit-transform: translateZ(-100px) rotateY(90deg)
+    
+    #cube.show-top, #f-t:checked ~ #cube 
+		-webkit-transform: translateZ(-100px) rotateX(-90deg )
+    
+    #cube.show-bottom, #f-bottom:checked ~ #cube 
+		-webkit-transform: translateZ(-100px) rotateX(90deg)
+    
+	section, footer, nav
+		display: block
+
+	figure
+		margin: 0
+		
 	.an-it-contractor, 
 	.an-employer
 		display:inline-block
@@ -736,6 +806,7 @@
 	.account-panel 
 		position: absolute
 		overflow-y: scroll
+		overflow-x: hidden
 		padding-top: 30px
 		width: 100%
 		top: 0
@@ -1379,3 +1450,4 @@
 	#btn-employer 
 		left: -10px
 		top: 35px
+	
